unpackaged/main/default/objects/EmailTemplateFields__c/EmailTemplateFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Template Fields</label>
</CustomObject>