unpackaged/main/default/objects/EmailTemplateFields__c/fields/Email_Template_BG__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_BG__c</fullName>
    <label>Email Template BG</label>
    <type>Url</type>
</CustomField>