unpackaged/main/default/objects/EmailTemplateFields__c/fields/FooterText1__c.field-meta.xml
<CustomField>
    <fullName>FooterText1__c</fullName>
    <defaultValue>&quot;Register now for Evolve 2016 to see our latest cloud and Ci Anywhere software and plan your roadmap for the future. Evolve offers great networking opportunities, customer case studies and access to our product and industry experts,&quot;</defaultValue>
    <label>FooterText1</label>
    <type>TextArea</type>
</CustomField>