unpackaged/main/default/objects/EmailTemplateFields__c/fields/FooterText2__c.field-meta.xml
<CustomField>
    <fullName>FooterText2__c</fullName>
    <defaultValue>&quot;enabling you to make the most of your TechnologyOne investment. 18-21 October, Brisbane Convention and Exhibition Centre,&quot;</defaultValue>
    <label>FooterText2</label>
    <type>TextArea</type>
</CustomField>