unpackaged/main/default/objects/EmailTemplateFields__c/fields/FooterURL__c.field-meta.xml
<CustomField>
    <fullName>FooterURL__c</fullName>
    <defaultValue>&quot;www.technologyonecorp.com/evolve2016&quot;</defaultValue>
    <label>FooterURL</label>
    <type>Url</type>
</CustomField>