unpackaged/main/default/objects/EmailTemplateFields__c/fields/HTML_Block_1__c.field-meta.xml
<CustomField>
    <fullName>HTML_Block_1__c</fullName>
    <label>HTML Block 1</label>
    <type>Url</type>
</CustomField>