unpackaged/main/default/objects/EmailTemplateFields__c/fields/HTML_Block_2__c.field-meta.xml
<CustomField>
    <fullName>HTML_Block_2__c</fullName>
    <label>HTML Block 2</label>
    <type>Url</type>
</CustomField>