unpackaged/main/default/objects/EmailTemplateFields__c/fields/HTML_Block_3__c.field-meta.xml
<CustomField>
    <fullName>HTML_Block_3__c</fullName>
    <label>HTML Block 3</label>
    <type>Url</type>
</CustomField>