unpackaged/main/default/objects/EmailTemplateFields__c/fields/Phone_Nos__c.field-meta.xml
<CustomField>
    <fullName>Phone_Nos__c</fullName>
    <label>Phone Nos</label>
    <type>TextArea</type>
</CustomField>