unpackaged/main/default/objects/EmailTemplateFields__c/fields/T1_Logo__c.field-meta.xml
<CustomField>
    <fullName>T1_Logo__c</fullName>
    <label>T1 Logo</label>
    <type>Url</type>
</CustomField>